--- a/app/src/main/res/layout/module_a_sign_in.xml
+++ b/app/src/main/res/layout/module_a_sign_in.xml
@@ -4,14 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="it.szyszka.skillmarket.SignInActivity"
-    android:padding="20dp">
+    android:fitsSystemWindows="true"
+    tools:context="it.szyszka.skillmarket.SignInActivity">
+
+    <include
+        layout="@layout/module_a_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/sign_in_app_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/module_a_toolbar"
         android:layout_centerHorizontal="true"
         app:srcCompat="@mipmap/app_logo" />
 
@@ -20,9 +25,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/sign_in_app_logo"
         android:layout_centerVertical="true"
-        android:padding="10dp">
+        android:padding="30dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -77,6 +82,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/sign_in_main_container"
-        android:text="@string/sign_in_remember_me_text"/>
+        android:text="@string/sign_in_remember_me_text"
+        android:layout_marginStart="15dp"/>
 
 </RelativeLayout>
