--- a/app/src/main/res/layout/module_a_sign_up.xml
+++ b/app/src/main/res/layout/module_a_sign_up.xml
@@ -3,8 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="20dp">
+    android:layout_height="match_parent">
+
+    <include
+        layout="@layout/module_a_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="20dp">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -108,4 +118,5 @@
         android:textIsSelectable="false"
         android:textColor="@color/colorAccent"/>
 
+    </LinearLayout>
 </LinearLayout>
