--- a/app/src/main/res/layout/module_b_user_profile.xml
+++ b/app/src/main/res/layout/module_b_user_profile.xml
@@ -83,27 +83,19 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/user_profile_nested_scroll"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:padding="10dp"
-        android:background="@android:color/darker_gray">
+        <ListView
+            android:id="@+id/user_profile_offers"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
-        <include
-            layout="@layout/module_c_offer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
         android:src="@drawable/ic_invite"
-        app:layout_anchor="@id/user_profile_nested_scroll"
+        app:layout_anchor="@id/user_profile_offers"
         app:layout_anchorGravity="bottom|end" />
 
 </android.support.design.widget.CoordinatorLayout>
