--- a/app/src/main/res/layout/module_c_offer_item.xml
+++ b/app/src/main/res/layout/module_c_offer_item.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_margin="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,17 +27,23 @@
             android:layout_gravity="center_vertical">
 
             <TextView
+                android:id="@+id/offer_item_owner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Sample name"
                 android:textSize="20sp"
                 android:textColor="@android:color/background_light"
-                android:fontFamily="sans-serif-light"/>
+                android:fontFamily="sans-serif-light"
+                android:maxLines="1"/>
 
-            <include
-                layout="@layout/module_b_user_info_small_light"
+            <TextView
+                android:id="@+id/offer_item_owner_email"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="Sample email"
+                android:textColor="@android:color/background_light"
+                android:fontFamily="sans-serif-light"
+                android:maxLines="1"/>
 
         </LinearLayout>
 
@@ -45,14 +52,14 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/offer_contact"
+                android:id="@+id/offer_item_contact"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_mail"
                 android:layout_centerVertical="true"/>
 
             <ImageView
-                android:id="@+id/offer_rating"
+                android:id="@+id/offer_item_rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_filled_star"
@@ -60,7 +67,7 @@
                 android:layout_centerVertical="true"/>
 
             <ImageView
-                android:id="@+id/offer_observe"
+                android:id="@+id/offer_item_observe"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_eye_green"
@@ -73,28 +80,72 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
+        android:layout_height="250dp"
         android:orientation="vertical"
         android:background="@color/colorLightGreen">
 
         <TextView
+            android:id="@+id/offer_item_title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Title"
+            android:layout_height="0dp"
+            android:layout_weight="1.3"
+            android:text="Very long and sad title that will not fit in here, but someone will anyway put it in here"
+            android:maxLines="2"
             android:textColor="@android:color/background_dark"
-            android:textSize="30sp"
+            android:textSize="22sp"
             android:textAlignment="center"
             android:fontFamily="sans-serif-light"
-            android:layout_margin="5dp"/>
+            android:layout_marginTop="5dp"
+            android:gravity="center_vertical"
+            android:padding="5dp"/>
 
         <TextView
+            android:id="@+id/offer_item_category"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="0dp"
+            android:layout_weight="0.9"
+            android:text="Short category"
+            android:maxLines="1"
+            android:textColor="@android:color/background_dark"
+            android:textSize="15sp"
+            android:fontFamily="sans-serif-light"
+            android:drawableStart="@drawable/ic_default_category"
+            android:drawablePadding="10dp"
+            android:gravity="center_vertical"
+            android:paddingStart="10dp"/>
+
+        <TextView
+            android:id="@+id/offer_item_short_description"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2.1"
             android:text="@string/lorem"
+            android:maxLines="4"
             android:textColor="#3f3f3f"
             android:fontFamily="sans-serif-light"
-            android:lineSpacingExtra="5sp"/>
+            android:lineSpacingExtra="5sp"
+            android:padding="10dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.8"
+            android:background="#fff9c4">
+
+            <TextView
+                android:id="@+id/offer_item_payment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_payment"
+                android:drawablePadding="10dp"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:gravity="center_vertical"
+                android:text="Short payment information"
+                android:textSize="16sp"
+                android:paddingStart="10dp"
+                android:textColor="#000000" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
