--- a/app/src/main/res/layout/module_b_user_profile.xml
+++ b/app/src/main/res/layout/module_b_user_profile.xml
@@ -71,9 +71,8 @@
                     <android.support.design.widget.TabLayout
                         android:id="@+id/user_profile_tabs"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                    </android.support.design.widget.TabLayout>
+                        android:layout_height="wrap_content"
+                        app:layout_collapseMode="pin" />
 
                 </LinearLayout>
 
@@ -83,11 +82,24 @@
 
     </android.support.design.widget.AppBarLayout>
 
-        <ListView
-            android:id="@+id/user_profile_offers"
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/user_profile_offers"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
 
 
     <android.support.design.widget.FloatingActionButton
