--- a/app/src/main/res/layout/module_d_opinion_item.xml
+++ b/app/src/main/res/layout/module_d_opinion_item.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
-        android:background="@color/colorPrimaryDark" >
+        android:background="@color/colorPrimaryDark">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="45dp"
@@ -51,26 +51,30 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/offer_item_contact"
+            <TextView
+                android:id="@+id/opinion_rating"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_mail"
-                android:layout_centerVertical="true"/>
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:gravity="center_vertical"
+                android:text="3,5"
+                android:textColor="@android:color/background_light"
+                android:textSize="30sp"
+                android:textAlignment="center"
+                android:fontFamily="sans-serif-light"/>
 
             <ImageView
-                android:id="@+id/offer_item_rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_filled_star"
-                android:layout_centerHorizontal="true"
+                android:layout_toEndOf="@+id/opinion_rating"
                 android:layout_centerVertical="true"/>
 
             <ImageView
-                android:id="@+id/offer_item_observe"
+                android:id="@+id/opinion_delete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_eye_green"
+                app:srcCompat="@drawable/ic_trash"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"/>
 
@@ -80,72 +84,22 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="200dp"
         android:orientation="vertical"
         android:background="@color/colorLightGreen">
 
         <TextView
-            android:id="@+id/offer_item_title"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.3"
-            android:text="Very long and sad title that will not fit in here, but someone will anyway put it in here"
-            android:maxLines="2"
-            android:textColor="@android:color/background_dark"
-            android:textSize="22sp"
-            android:textAlignment="center"
-            android:fontFamily="sans-serif-light"
-            android:layout_marginTop="5dp"
-            android:gravity="center_vertical"
-            android:padding="5dp"/>
-
-        <TextView
-            android:id="@+id/offer_item_category"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.9"
-            android:text="Short category"
-            android:maxLines="1"
-            android:textColor="@android:color/background_dark"
-            android:textSize="15sp"
-            android:fontFamily="sans-serif-light"
-            android:drawableStart="@drawable/ic_default_category"
-            android:drawablePadding="10dp"
-            android:gravity="center_vertical"
-            android:paddingStart="10dp"/>
-
-        <TextView
             android:id="@+id/offer_item_short_description"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2.1"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical|center_horizontal"
             android:text="@string/lorem"
-            android:maxLines="4"
+            android:maxLines="8"
             android:textColor="#3f3f3f"
             android:fontFamily="sans-serif-light"
             android:lineSpacingExtra="5sp"
+            android:textAlignment="center"
             android:padding="10dp"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.8"
-            android:background="#fff9c4">
-
-            <TextView
-                android:id="@+id/offer_item_payment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_payment"
-                android:drawablePadding="10dp"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:gravity="center_vertical"
-                android:text="Short payment information"
-                android:textSize="16sp"
-                android:paddingStart="10dp"
-                android:textColor="#000000" />
-
-        </LinearLayout>
 
     </LinearLayout>
 
