--- a/app/src/main/res/layout/module_c_detail_offer.xml
+++ b/app/src/main/res/layout/module_c_detail_offer.xml
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-light"
                 android:maxLines="1"
-                android:text="Sample name"
+                android:text="Tadeusz Korczak"
                 android:textColor="@android:color/background_light"
                 android:textSize="20sp" />
 
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
-                android:text="Sample email"
+                android:text="tadeusz.k@gmail.com"
                 android:textColor="@android:color/background_light"
                 android:fontFamily="sans-serif-light"/>
 
@@ -96,7 +96,7 @@
         android:layout_margin="5dp"
         android:fontFamily="sans-serif-light"
         android:maxLines="2"
-        android:text="Title"
+        android:text="Cyklinowanie bezpyłowe"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark"
         android:textSize="30sp" />
@@ -117,7 +117,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-light"
                 android:lineSpacingExtra="8sp"
-                android:text="@string/lorem"
+                android:text="@string/sampleoffer"
                 android:textColor="@android:color/background_dark"
                 android:textSize="16sp"
                 android:padding="10dp"/>
@@ -137,7 +137,7 @@
                 android:drawablePadding="10dp"
                 android:drawableStart="@drawable/ic_payment"
                 android:gravity="center_vertical"
-                android:text="Short payment information"
+                android:text="W zależności od metrarzu podłogi"
                 android:textColor="#000000"
                 android:textSize="16sp"
                 android:padding="10dp"/>
