--- a/app/src/main/res/layout/module_d_opinion_item.xml
+++ b/app/src/main/res/layout/module_d_opinion_item.xml
@@ -27,20 +27,20 @@
             android:layout_gravity="center_vertical">
 
             <TextView
-                android:id="@+id/offer_item_owner"
+                android:id="@+id/opinion_item_owner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Sample name"
+                android:text="Mariusz Górski"
                 android:textSize="20sp"
                 android:textColor="@android:color/background_light"
                 android:fontFamily="sans-serif-light"
                 android:maxLines="1"/>
 
             <TextView
-                android:id="@+id/offer_item_owner_email"
+                android:id="@+id/opinion_item_owner_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sample email"
+                android:text="gorek.o@wp.pl"
                 android:textColor="@android:color/background_light"
                 android:fontFamily="sans-serif-light"
                 android:maxLines="1"/>
@@ -85,17 +85,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:orientation="vertical"
         android:background="@color/colorLightGreen">
 
         <TextView
-            android:id="@+id/offer_item_short_description"
+            android:id="@+id/opinion_item_short_description"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal"
-            android:text="@string/lorem"
+            android:text="@string/sampleopinion"
             android:maxLines="8"
-            android:textColor="#3f3f3f"
+            android:textColor="#1f1f1f"
             android:fontFamily="sans-serif-light"
             android:lineSpacingExtra="5sp"
             android:textAlignment="center"
