--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#9c27b0</color>
 
     <color name="colorLightGreen">#f1f8e9</color>
+    <color name="colorDarkGray">#3F3F3F</color>
 </resources>
