--- a/app/src/main/res/layout/module_a_sign_up.xml
+++ b/app/src/main/res/layout/module_a_sign_up.xml
@@ -16,55 +16,25 @@
         android:orientation="vertical"
         android:padding="20dp">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/app_logo"
-        android:layout_gravity="center_horizontal"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="10dp">
-
-        <TextView
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/sign_up_full_name_text"
-            android:textSize="12sp"
-            android:layout_marginStart="3dp"/>
+            app:srcCompat="@mipmap/app_logo"
+            android:layout_gravity="center_horizontal"/>
 
-        <EditText
+        <include
+            android:id="@+id/sign_up_alias"
+            layout="@layout/utils_labeled_input_text" />
+
+        <include
             android:id="@+id/sign_up_full_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"/>
+            layout="@layout/utils_labeled_input_text" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sign_up_email_text"
-            android:textSize="12sp"
-            android:layout_marginStart="3dp"/>
-
-        <EditText
+        <include
             android:id="@+id/sign_up_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"/>
+            layout="@layout/utils_labeled_input_text" />
 
-    </LinearLayout>
-
-    <LinearLayout
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
