--- a/app/src/main/res/layout/module_b_user_profile.xml
+++ b/app/src/main/res/layout/module_b_user_profile.xml
@@ -6,27 +6,27 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/user_profile_appbar"
         android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:layout_height="320dp"
+        android:fitsSystemWindows="true">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/user_profile_collapsing"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:title="@string/app_name">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_width="110dp"
                     android:layout_height="110dp"
                     android:layout_gravity="center_horizontal"
-                    android:src="@drawable/ic_person"
                     android:layout_marginTop="5dp"
+                    android:src="@drawable/ic_person"
                     app:civ_border_color="#50FFFFFF"
                     app:civ_border_width="1dp" />
 
@@ -35,16 +35,16 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
                     android:orientation="vertical"
-                    android:padding="15dp">
+                    android:padding="10dp">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Rafał Szyszka"
-                        android:textColor="@android:color/background_light"
-                        android:textSize="30sp"
                         android:fontFamily="sans-serif-light"
-                        android:textAlignment="center"/>
+                        android:text="Rafał Szyszka"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/background_light"
+                        android:textSize="30sp" />
 
                     <include
                         android:id="@+id/user_profile_rating"
@@ -52,31 +52,63 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:layout_margin="5dp"/>
+                        android:layout_margin="5dp" />
 
-                    <include
-                        android:id="@+id/user_profile_email"
-                        layout="@layout/module_b_user_info_small"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="5dp" />
+                        android:orientation="horizontal">
+
+                        <include
+                            android:id="@+id/user_profile_email"
+                            layout="@layout/module_b_user_info_small"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_marginBottom="5dp" />
+
+                        <include
+                            android:id="@+id/user_profile_phone"
+                            layout="@layout/module_b_user_info_small"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_marginBottom="5dp" />
+
+
+                    </LinearLayout>
 
                     <include
                         android:id="@+id/user_profile_location"
                         layout="@layout/module_b_user_info_small"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"/>
-
-                    <android.support.design.widget.TabLayout
-                        android:id="@+id/user_profile_tabs"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:layout_collapseMode="pin" />
+                        android:layout_marginBottom="10dp" />
 
                 </LinearLayout>
 
             </LinearLayout>
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/user_profile_tabs"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_gravity="bottom"
+                app:tabTextColor="@android:color/background_light">
+
+                <android.support.design.widget.TabItem android:text="O Mnie" />
+
+                <android.support.design.widget.TabItem android:text="Moje opinie" />
+
+                <android.support.design.widget.TabItem android:text="Moje ogłoszenia" />
+
+            </android.support.design.widget.TabLayout>
+
+            <android.support.v7.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize">
+            </android.support.v7.widget.Toolbar>
+            
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -86,7 +118,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -99,15 +131,16 @@
 
         </LinearLayout>
 
+
     </android.support.v4.widget.NestedScrollView>
 
 
     <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
         android:src="@drawable/ic_invite"
         app:layout_anchor="@id/user_profile_offers"
         app:layout_anchorGravity="bottom|end" />
+    android:layout_width="wrap_content"
 
 </android.support.design.widget.CoordinatorLayout>
