--- a/app/src/main/res/layout/mod_a_sign_up.xml
+++ b/app/src/main/res/layout/mod_a_sign_up.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <include
-        layout="@layout/module_a_toolbar"
+        layout="@layout/mod_a_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
