--- a/app/src/main/res/layout/mod_a_sign_up.xml
+++ b/app/src/main/res/layout/mod_a_sign_up.xml
@@ -17,8 +17,8 @@
         android:padding="20dp">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             app:srcCompat="@mipmap/app_logo"
             android:layout_gravity="center_horizontal"/>
 
@@ -35,12 +35,14 @@
             layout="@layout/utils_labeled_input_text" />
 
         <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:orientation="vertical">
+            android:id="@+id/sign_up_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:orientation="vertical">
 
         <TextView
+            android:id="@+id/labeled_input_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
@@ -52,7 +54,7 @@
             android:layout_height="wrap_content">
 
             <EditText
-                android:id="@+id/sign_up_password"
+                android:id="@+id/labeled_input_edit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -62,9 +64,9 @@
                 android:id="@+id/sign_up_toggle_password"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_alignEnd="@+id/sign_up_password"
+                android:layout_alignEnd="@+id/labeled_input_edit"
                 app:srcCompat="@drawable/ic_eye"
-                android:layout_alignBottom="@+id/sign_up_password" />
+                android:layout_alignBottom="@+id/labeled_input_edit" />
 
         </RelativeLayout>
 
