--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="colorLightGreen">#f1f8e9</color>
     <color name="colorDarkGray">#3F3F3F</color>
+    <color name="errorRed">#F44336</color>
 </resources>
