--- a/app/src/main/res/layout/mod_a_sign_up_details.xml
+++ b/app/src/main/res/layout/mod_a_sign_up_details.xml
@@ -17,8 +17,8 @@
         android:padding="20dp">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             app:srcCompat="@mipmap/app_logo"
             android:layout_gravity="center_horizontal"/>
 
