--- a/app/src/main/res/layout/mod_a_sign_in.xml
+++ b/app/src/main/res/layout/mod_a_sign_in.xml
@@ -24,16 +24,15 @@
         android:id="@+id/sign_in_main_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_below="@+id/sign_in_app_logo"
+        android:orientation="vertical"
         android:layout_centerVertical="true"
-        android:padding="30dp">
+        android:padding="@dimen/regular_padding">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginBottom="20dp">
+            android:orientation="vertical" >
 
             <EditText
                 android:id="@+id/sign_in_email"
@@ -84,5 +83,13 @@
         android:layout_below="@id/sign_in_main_container"
         android:text="@string/sign_in_remember_me_text"
         android:layout_marginStart="15dp"/>
+
+    <TextView
+        android:id="@+id/sign_in_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/sign_in_remember_me"
+        android:textSize="@dimen/regular_font"
+        android:textAlignment="center"/>
 
 </RelativeLayout>
