--- a/app/src/main/res/layout/mod_a_sign_up.xml
+++ b/app/src/main/res/layout/mod_a_sign_up.xml
@@ -14,13 +14,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="@dimen/small_padding">
 
         <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
             app:srcCompat="@mipmap/app_logo"
-            android:layout_gravity="center_horizontal"/>
+            style="@style/logo_image"/>
 
         <include
             android:id="@+id/sign_up_alias"
@@ -65,8 +63,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignEnd="@+id/labeled_input_edit"
-                app:srcCompat="@drawable/ic_eye"
-                android:layout_alignBottom="@+id/labeled_input_edit" />
+                android:layout_alignBottom="@+id/labeled_input_edit"
+                app:srcCompat="@drawable/ic_eye" />
 
         </RelativeLayout>
 
