--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="module_a_main_padding">20dp</dimen>
-    <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!-- fonts -->
+    <dimen name="small_font">12sp</dimen>
+    <dimen name="regular_font">14sp</dimen>
+    <dimen name="large_font">16sp</dimen>
+    <dimen name="extra_large_font">20sp</dimen>
+
+    <!-- margins -->
+    <dimen name="small_margin">10dp</dimen>
+    <dimen name="regular_margin">20dp</dimen>
+    <dimen name="large_margin">30dp</dimen>
+
+    <!-- paddings -->
+    <dimen name="extra_small_padding">10dp</dimen>
+    <dimen name="small_padding">20dp</dimen>
+    <dimen name="regular_padding">30dp</dimen>
+
 </resources>
