--- a/app/src/main/res/layout/user_sign_in_activity.xml
+++ b/app/src/main/res/layout/user_sign_in_activity.xml
@@ -8,7 +8,7 @@
     tools:context="it.szyszka.skillmarket.modules.user.activities.SignInActivity_">
 
     <include
-        layout="@layout/mod_a_toolbar"
+        layout="@layout/user_toolbar_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -16,7 +16,7 @@
         android:id="@+id/sign_in_app_logo"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_below="@+id/module_a_toolbar"
+        android:layout_below="@+id/user_toolbar"
         android:layout_centerHorizontal="true"
         app:srcCompat="@mipmap/app_logo" />
 
@@ -25,35 +25,46 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/sign_in_app_logo"
-        android:orientation="vertical"
         android:layout_centerVertical="true"
+        android:orientation="vertical"
         android:padding="@dimen/regular_padding">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
-            <EditText
+            <android.support.design.widget.TextInputLayout
                 android:id="@+id/sign_in_email"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:inputType="textEmailAddress"
-                android:drawableStart="@drawable/ic_person"
-                android:drawablePadding="@dimen/small_padding"
-                android:hint="@string/sign_up_email_text"
-                />
+                android:layout_height="match_parent">
 
-            <EditText
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="@dimen/small_margin"
+                    android:drawablePadding="@dimen/small_padding"
+                    android:drawableStart="@drawable/ic_person"
+                    android:hint="@string/sign_up_email_text"
+                    android:inputType="textEmailAddress" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
                 android:id="@+id/sign_in_password"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:drawableStart="@drawable/ic_key"
-                android:drawablePadding="@dimen/small_padding"
-                android:hint="@string/sign_up_password_text"
-                />
+                android:layout_height="match_parent">
+
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="@dimen/small_margin"
+                    android:drawablePadding="@dimen/small_padding"
+                    android:drawableStart="@drawable/ic_key"
+                    android:hint="@string/sign_up_password_text"
+                    android:inputType="textPassword" />
+
+            </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
 
@@ -68,7 +79,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="#cddc39"
-                android:text="@string/sign_in_login_text"/>
+                android:text="@string/sign_in_login_text" />
 
             <Button
                 android:id="@+id/sign_in_sing_up"
@@ -76,7 +87,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="#ffeb3b"
-                android:text="@string/sign_in_sign_up_text"/>
+                android:text="@string/sign_in_sign_up_text" />
 
         </LinearLayout>
 
@@ -87,15 +98,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/sign_in_main_container"
-        android:text="@string/sign_in_remember_me_text"
-        android:layout_marginStart="15dp"/>
+        android:layout_marginStart="15dp"
+        android:text="@string/sign_in_remember_me_text" />
 
     <TextView
         android:id="@+id/sign_in_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/sign_in_remember_me"
-        android:textSize="@dimen/regular_font"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:textSize="@dimen/regular_font" />
 
 </RelativeLayout>
