--- a/app/src/main/res/layout/action_tile.xml
+++ b/app/src/main/res/layout/action_tile.xml
@@ -13,15 +13,15 @@
         android:layout_width="@dimen/action_tile_icon_size"
         android:layout_height="@dimen/action_tile_icon_size"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="@dimen/large_margin"
-        app:srcCompat="@drawable/ic_person" />
+        android:layout_marginBottom="@dimen/regular_margin" />
 
     <TextView
         android:id="@+id/tile_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:textAllCaps="true" />
+        android:textAlignment="center"
+        android:textSize="@dimen/regular_font"/>
 
 
 </LinearLayout>
