--- a/app/src/main/res/layout/user_account_view.xml
+++ b/app/src/main/res/layout/user_account_view.xml
@@ -75,7 +75,6 @@
                             android:layout_weight="1"
                             android:layout_marginBottom="5dp" />
 
-
                     </LinearLayout>
 
                     <include
@@ -131,16 +130,15 @@
 
         </LinearLayout>
 
-
     </android.support.v4.widget.NestedScrollView>
-
 
     <android.support.design.widget.FloatingActionButton
         android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         android:layout_margin="24dp"
         android:src="@drawable/ic_invite"
+        app:fabSize="normal"
         app:layout_anchor="@id/user_profile_offers"
         app:layout_anchorGravity="bottom|end" />
-    android:layout_width="wrap_content"
 
 </android.support.design.widget.CoordinatorLayout>
