--- a/app/src/main/res/layout/user_sign_up_details_activity.xml
+++ b/app/src/main/res/layout/user_sign_up_details_activity.xml
@@ -20,7 +20,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_gravity="center_horizontal"
-            app:srcCompat="@mipmap/app_logo" />
+            app:srcCompat="@mipmap/ic_app_logo" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/sign_up_address"
