--- a/app/src/main/res/values/my_styles.xml
+++ b/app/src/main/res/values/my_styles.xml
@@ -7,4 +7,10 @@
         <item name="android:layout_gravity">center_horizontal</item>
     </style>
 
+    <style name="fab_home_button">
+        <item name="android:layout_marginBottom">@dimen/small_margin</item>
+        <item name="android:layout_marginEnd">@dimen/small_margin</item>
+        <item name="android:backgroundTint">@color/colorGreen</item>
+    </style>
+
 </resources>
