--- a/app/src/main/res/layout/user_sign_up_activity.xml
+++ b/app/src/main/res/layout/user_sign_up_activity.xml
@@ -67,7 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:passwordToggleEnabled="true"
-            app:passwordToggleTint="@color/material_blue_grey_80">
+            app:passwordToggleTint="@color/colorGreen">
 
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
