--- a/app/src/main/res/layout/user_sign_in_activity.xml
+++ b/app/src/main/res/layout/user_sign_in_activity.xml
@@ -18,8 +18,8 @@
         android:layout_height="100dp"
         android:layout_below="@+id/user_toolbar"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/regular_margin"
-        app:srcCompat="@mipmap/ic_app_logo" />
+        android:layout_marginTop="@dimen/small_margin"
+        app:srcCompat="@mipmap/ic_app_logo_txt" />
 
     <LinearLayout
         android:id="@+id/sign_in_main_container"
