--- a/app/src/main/res/layout/action_tile.xml
+++ b/app/src/main/res/layout/action_tile.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_alignParentEnd="true"
-    android:background="#75F1F2F1"
+    android:background="@color/transparentWhite"
     android:orientation="vertical"
     android:padding="@dimen/small_padding" >
 
