--- a/app/src/main/res/layout/user_account_fragment.xml
+++ b/app/src/main/res/layout/user_account_fragment.xml
@@ -10,11 +10,13 @@
         layout="@layout/user_account_view" />
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/user_account_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:clickable="true"
+        android:focusable="true"
         app:rippleColor="@color/colorPrimary"
         app:borderWidth="0dp"
         app:fabSize="normal"
