--- a/app/src/main/res/layout/user_rating_view.xml
+++ b/app/src/main/res/layout/user_rating_view.xml
@@ -6,28 +6,28 @@
     android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/rating_first_star"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_filled_star" />
+        android:layout_height="wrap_content" />
 
     <ImageView
+        android:id="@+id/rating_second_star"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_filled_star" />
+        android:layout_height="wrap_content" />
 
     <ImageView
+        android:id="@+id/rating_third_star"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_filled_star" />
+        android:layout_height="wrap_content" />
 
     <ImageView
+        android:id="@+id/rating_fourth_star"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_half_star" />
+        android:layout_height="wrap_content" />
 
     <ImageView
+        android:id="@+id/rating_fifth_star"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_no_star" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
