--- a/app/src/main/res/layout/user_sign_up_activity.xml
+++ b/app/src/main/res/layout/user_sign_up_activity.xml
@@ -18,7 +18,7 @@
 
         <ImageView
             style="@style/logo_image"
-            app:srcCompat="@mipmap/ic_app_logo" />
+            app:srcCompat="@mipmap/ic_app_logo_txt" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/sign_up_alias"
